Scrolling into active video fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
   text-align: center;
+
 }
 
+body {
+  height: 100%;
 
+}
 
 .App-header {
   background-color: #282c34;
@@ -26,6 +30,7 @@
   .parent{
     display: flex;
     flex-direction: column;
+
   }
 
 }
